--- a/50-abstraction-practical-example/pom.xml
+++ b/50-abstraction-practical-example/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>javafx-fxml</artifactId>
             <version>23</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.34</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
