--- a/50-abstraction-practical-example/.gitignore
+++ b/50-abstraction-practical-example/.gitignore
@@ -2,6 +2,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+src/main/resources/oop-abstraction-firebase-adminsdk-vig2z-e951ead69b.json
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
